fixed imports and updated the default values for benchmarking

--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7cd3f67c",
+   "id": "b784909b",
    "metadata": {},
    "source": [
     "# Getting Started with MetaQuantus\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "83da0fd1",
+   "id": "4d954073",
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9451238b",
+   "id": "726ec0f2",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a0af68d3",
+   "id": "aa95f277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bde729f",
+   "id": "cb007863",
    "metadata": {},
    "source": [
     "Run below cell if Google Colab is used."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5d00558e",
+   "id": "ce3b091d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "456b12b0",
+   "id": "1734a4a1",
    "metadata": {},
    "source": [
     "## 1) Preliminaries"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5316533b",
+   "id": "82b45a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4f57011",
+   "id": "f806feef",
    "metadata": {},
    "source": [
     "### 1.1 Load data"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "29d80ce7",
+   "id": "71d0fc4a",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0d6f14",
+   "id": "32e16fd9",
    "metadata": {},
    "source": [
     "### 1.2 Load explanations"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "177f0789",
+   "id": "848998a3",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b9e079",
+   "id": "16ff9962",
    "metadata": {},
    "source": [
     "### 1.3 Load estimators"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8149606e",
+   "id": "56ea9ebb",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "59417e89",
+   "id": "3fe82978",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "44ab0571",
+   "id": "ecdf617e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a3cf45c",
+   "id": "f1fe97a3",
    "metadata": {},
    "source": [
     "## 2) Run Meta-Evaluation"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bb42184",
+   "id": "7d154864",
    "metadata": {},
    "source": [
     "### 2.1 Define test suite\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1fb0bfae",
+   "id": "3dc1f716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2f632456",
+   "id": "257b4f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aac55d0",
+   "id": "fe29352b",
    "metadata": {},
    "source": [
     "### 2.2 Run MetaQuantus\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6b47b18c",
+   "id": "4539d277",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "862c8ab5",
+   "id": "254cb3ea",
    "metadata": {},
    "source": [
     "## 3) Run Benchmarking"
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363f76a3",
+   "id": "25651f5d",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
       "  LeNet\n",
       "    Localisation\n",
       "      Pointing-Game\n",
-      "UID=8b4b\n",
+      "UID=6c40\n",
       "Model Resilience Test\n"
      ]
     },
@@ -749,7 +749,7 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.005525827407836914,
+       "elapsed": 0.005079030990600586,
        "initial": 0,
        "n": 0,
        "ncols": null,
@@ -763,583 +763,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "95373fb0c5884e2ea422dc83ddb43138",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.0050029754638671875,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "510ac3146b9c4756a68e0e6272724009",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005260944366455078,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5a27aa4f2414700b2b74f35bf65f5ef",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.004585981369018555,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f18d547f8b2b48a6978dd77ed680fd0d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Top-K Intersection\n",
-      "UID=8b4b\n",
-      "Model Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.003692150115966797,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22e6c5ba56814bbca0a34e62547ee4ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.003919839859008789,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71d066a8ee284120bf7dc3d9192486ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.0040929317474365234,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74d5cd20e7ca4a5fa95c3aaf8cc02f07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.004088163375854492,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "638681f186cb4e9fb1917f5355593766",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Relevance Rank Accuracy\n",
-      "UID=8b4b\n",
-      "Model Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.0038499832153320312,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c2cc89fc2244d86b503c48eebd089cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.004518270492553711,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b81a5e81bad4a18a831fc4a3ed73418",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.003598928451538086,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c2adae9ec6f41db8ad83f8927dcf89d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.003523111343383789,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0babb1df668f49c89b91b25766e32364",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      Relevance Mass Accuracy\n",
-      "UID=8b4b\n",
-      "Model Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.006690025329589844,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c3493e224064612841a575f348f6353",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005295991897583008,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45ed129385624448a3961e3521890e2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Resilience Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005388975143432617,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6102cca7f26f4584b717c238fc434ee0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input Adversary Test\n"
-     ]
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005112886428833008,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Iterations",
-       "rate": null,
-       "total": 5,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18437debc8974c388b1c03e5d64ecdfa",
+       "model_id": "30a21d82b8c643c882e1e2344818124b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1359,13 +783,14 @@
     "    experimental_settings=dataset_settings,\n",
     "    device=device,\n",
     "    write_to_file=False,\n",
+    "    save=False\n",
     ")()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857e5759",
+   "id": "b819a397",
    "metadata": {},
    "outputs": [],
    "source": []
