--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e474ec45",
+   "id": "e1082e53",
    "metadata": {},
    "source": [
     "# Getting Started with MetaQuantus\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22baeef4",
+   "id": "426f6621",
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7522921e",
+   "id": "72f8ff89",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a7796cca",
+   "id": "a6c4385b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ab169cf",
+   "id": "a5e40cef",
    "metadata": {},
    "source": [
     "Run below cell if Google Colab is used."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fadad4fa",
+   "id": "b4037af4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d8d2fcd",
+   "id": "86512138",
    "metadata": {},
    "source": [
     "## 1) Preliminaries"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "23a0629a",
+   "id": "88143108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bfc26a",
+   "id": "65ebe897",
    "metadata": {},
    "source": [
     "### 1.1 Load data"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fadc7f6b",
+   "id": "9f45d782",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e41aa32a",
+   "id": "eb42dd07",
    "metadata": {},
    "source": [
     "### 1.2 Load explanations"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "58fcb3cc",
+   "id": "33784f4b",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ffc2235",
+   "id": "04c3f2d0",
    "metadata": {},
    "source": [
     "### 1.3 Load estimators"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7b883fe9",
+   "id": "6f666aeb",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6733434c",
+   "id": "34cb5699",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "59d86514",
+   "id": "6e4d50a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4996e8",
+   "id": "6ecc58ac",
    "metadata": {},
    "source": [
     "## 2) Run Meta-Evaluation"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11363fa9",
+   "id": "4feecb1e",
    "metadata": {},
    "source": [
     "### 2.1 Define test suite\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6795146b",
+   "id": "d7500e0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d1c13907",
+   "id": "c139d781",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af93b6d",
+   "id": "a23f2ba8",
    "metadata": {},
    "source": [
     "### 2.2 Run MetaQuantus\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8fa2fa13",
+   "id": "dd949c10",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c55a9ab",
+   "id": "62c3a7f6",
    "metadata": {},
    "source": [
     "## 3) Run Benchmarking"
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1d32d5",
+   "id": "ae4e8ae9",
    "metadata": {},
    "outputs": [
     {
@@ -773,6 +773,390 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0051877498626708984,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48788bb30f624863a260c554cb5c9620",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.005507230758666992,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34b6c435d90c4345acdb30e6b23aa5e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.006079912185668945,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc122daa18a047808861f46ec1ac7efb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Top-K Intersection\n",
+      "UID=6c40\n",
+      "Model Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.003710031509399414,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb60e33fad5140a9b655dc5711ca546b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.003626108169555664,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1b1cf2cba47c4011b146cd7802dbae84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.00356292724609375,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b23a904193e74544a3eafabbbb080526",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.004541873931884766,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e7bd18941e243a59d67a7e4a213307b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Relevance Rank Accuracy\n",
+      "UID=6c40\n",
+      "Model Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0036597251892089844,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5cc7d17c26de4fb3ab6926b017315953",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0042266845703125,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5239195ad4e14c8da97238212c5b51c3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0038909912109375,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24da8b5f50544f3f826307c0cb0f8f27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -782,14 +1166,13 @@
     "    estimators=estimators_localisation,\n",
     "    experimental_settings=dataset_settings,\n",
     "    device=device,\n",
-    "\n",
     ")()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "264297a8",
+   "id": "2a659095",
    "metadata": {},
    "outputs": [],
    "source": []
