--- a/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
+++ b/tutorials/Tutorial-Getting-Started-with-MetaQuantus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1082e53",
+   "id": "60363346",
    "metadata": {},
    "source": [
     "# Getting Started with MetaQuantus\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "426f6621",
+   "id": "4b4abe45",
    "metadata": {
     "scrolled": true
    },
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "72f8ff89",
+   "id": "67549761",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a6c4385b",
+   "id": "26e7d6b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e40cef",
+   "id": "74a52ba8",
    "metadata": {},
    "source": [
     "Run below cell if Google Colab is used."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4037af4",
+   "id": "e5762155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86512138",
+   "id": "883e22e2",
    "metadata": {},
    "source": [
     "## 1) Preliminaries"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "88143108",
+   "id": "4d815c87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ebe897",
+   "id": "6d738e98",
    "metadata": {},
    "source": [
     "### 1.1 Load data"
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9f45d782",
+   "id": "e0ae3bc3",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb42dd07",
+   "id": "a8575065",
    "metadata": {},
    "source": [
     "### 1.2 Load explanations"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "33784f4b",
+   "id": "58a2b82e",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c3f2d0",
+   "id": "9ff7c2f7",
    "metadata": {},
    "source": [
     "### 1.3 Load estimators"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6f666aeb",
+   "id": "f68ebd1d",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "34cb5699",
+   "id": "c339bc00",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6e4d50a4",
+   "id": "f0cba2d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ecc58ac",
+   "id": "bf3cdfee",
    "metadata": {},
    "source": [
     "## 2) Run Meta-Evaluation"
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4feecb1e",
+   "id": "095a67f3",
    "metadata": {},
    "source": [
     "### 2.1 Define test suite\n",
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d7500e0b",
+   "id": "9139dff3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c139d781",
+   "id": "6aba1d03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23f2ba8",
+   "id": "aefd1566",
    "metadata": {},
    "source": [
     "### 2.2 Run MetaQuantus\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "dd949c10",
+   "id": "765271a6",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62c3a7f6",
+   "id": "9a0cc3c6",
    "metadata": {},
    "source": [
     "## 3) Run Benchmarking"
@@ -727,8 +727,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ae4e8ae9",
+   "execution_count": 21,
+   "id": "b84ea6b9",
    "metadata": {},
    "outputs": [
     {
@@ -1157,6 +1157,205 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0037708282470703125,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "25055b24b49e4377903adc40713fb9e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Relevance Mass Accuracy\n",
+      "UID=6c40\n",
+      "Model Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.004706859588623047,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e1dbe982f1446df8569750a9125a0a6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.005109071731567383,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35930f82b7634b66ab13a836720e9206",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Resilience Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.0050847530364990234,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc75814a10134947bcf6e8382abc98a4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Adversary Test\n"
+     ]
+    },
+    {
+     "data": {
+      "application/json": {
+       "ascii": false,
+       "bar_format": null,
+       "colour": null,
+       "elapsed": 0.004801034927368164,
+       "initial": 0,
+       "n": 0,
+       "ncols": null,
+       "nrows": null,
+       "postfix": null,
+       "prefix": "Iterations",
+       "rate": null,
+       "total": 5,
+       "unit": "it",
+       "unit_divisor": 1000,
+       "unit_scale": false
+      },
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "151dd1f319fd4cd1a603a2a5d11f3f2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Iterations:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Benchmarking completed (stored in /content/drive/MyDrive/Projects/MetaQuantus/results/benchmarks/04092023_MNIST_benchmark_exercise_6c40_MNIST_LeNet_Localisation_Relevance Mass Accuracy_MNIST_LeNet_Localisation_Pointing-Game).\n"
+     ]
     }
    ],
    "source": [
@@ -1172,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a659095",
+   "id": "b2e56567",
    "metadata": {},
    "outputs": [],
    "source": []
